2009-11-18  Gabor Loki  <loki@inf.u-szeged.hu>

        Reviewed by Darin Adler.

        Fix the clobber list of cacheFlush for ARM and Thumb2 on Linux
        https://bugs.webkit.org/show_bug.cgi?id=31631

        * jit/ExecutableAllocator.h:
        (JSC::ExecutableAllocator::cacheFlush):

2009-11-18  Harald Fernengel  <harald.fernengel@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix detection of linux-g++

        Never use "linux-g++*" to check for linux-g++, since this will break embedded
        builds which use linux-arm-g++ and friends. Use 'linux*-g++*' to check for any
        g++ on linux mkspec.

        * JavaScriptCore.pri:

2009-11-17  Jon Honeycutt  <jhoneycutt@apple.com>

        Add JSContextRefPrivate.h to list of copied files.

        Reviewed by Mark Rowe.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreGenerated.make:

2009-11-17  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Adam Barth.

        [GTK] Style cleanup for GOwnPtr
        https://bugs.webkit.org/show_bug.cgi?id=31506

        Remove forward declaration in GOwnPtr and do some style cleanup.

        * wtf/GOwnPtr.cpp:
        * wtf/GOwnPtr.h:
        (WTF::GOwnPtr::GOwnPtr):
        (WTF::GOwnPtr::~GOwnPtr):
        (WTF::GOwnPtr::get):
        (WTF::GOwnPtr::release):
        (WTF::GOwnPtr::outPtr):
        (WTF::GOwnPtr::set):
        (WTF::GOwnPtr::clear):
        (WTF::GOwnPtr::operator*):
        (WTF::GOwnPtr::operator->):
        (WTF::GOwnPtr::operator!):
        (WTF::GOwnPtr::operator UnspecifiedBoolType):
        (WTF::GOwnPtr::swap):
        (WTF::swap):
        (WTF::operator==):
        (WTF::operator!=):
        (WTF::getPtr):
        (WTF::freeOwnedGPtr):

2009-11-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Incorrect use of JavaScriptCore API in DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=31577
